Fixed instance handling and improved abilities runnable creation